date-picker fix bug modify bottom align on example

--- a/src/assets/examples/datepicker-locale/datepicker-locale.component.css
+++ b/src/assets/examples/datepicker-locale/datepicker-locale.component.css
@@ -1,3 +1,9 @@
 mat-form-field {
   margin-right: 24px;
 }
+
+:host {
+  display: flex;
+  justify-content: center;
+  align-items: baseline;
+}
